--- a/week15.html
+++ b/week15.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>115</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>230</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>70</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>80</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>240</td></tr>
+<tr><td></td>              <td></td><td align=right>855</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>180</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>100</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>75</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>LThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>LThomas</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>10</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>70</td></tr>
+<tr><td></td>              <td></td><td align=right>560</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>385</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>75</td></tr>
+<tr><td>MDavis</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>175</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>60</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>90</td></tr>
+<tr><td></td>              <td></td><td align=right>915</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>185</td></tr>
 <tr><td>Hines</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>220</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Beasley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Beasley</td>       <td></td><td align=right>55</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>85</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>35</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>655</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>190</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>170</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>30</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>155</td></tr>
 <tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>105</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>735</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>350</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>130</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>80</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>35</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>55</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>225</td></tr>
+<tr><td></td>              <td></td><td align=right>875</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>195</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>80</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>180</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>85</td></tr>
+<tr><td></td>              <td></td><td align=right>645</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>185</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>85</td></tr>
+<tr><td>Mostert</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>CDavis</td>        <td></td><td align=right>0</td></tr>
+<tr><td>CDavis</td>        <td></td><td align=right>180</td></tr>
 <tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>85</td></tr>
 <tr><td>Jeudy</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>565</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>115</td></tr>
 <tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Robinson</td>      <td></td><td align=right>40</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>105</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>115</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>105</td></tr>
+<tr><td></td>              <td></td><td align=right>670</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>100</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>30</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Tonyan</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>105</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>310</td></tr>
+<tr><td></td>              <td></td><td align=right>745</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,42 +167,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>12015</font></td>
-    <td><font size=2>8395</font></td>
+    <td><font size=2>12890</font></td>
+    <td><font size=2>9130</font></td>
     <td><font size=2>1555</font></td>
     <td><font size=2>580</font></td>
     <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>9800</font></td>
-    <td><font size=2>8975</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>10535</font></td>
+    <td><font size=2>9850</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9375</font></td>
-    <td><font size=2>9475</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9935</font></td>
+    <td><font size=2>10330</font></td>
     <td><font size=2>885</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8640</font></td>
-    <td><font size=2>8980</font></td>
+    <td><font size=2>9495</font></td>
+    <td><font size=2>9540</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8680</font></td>
-    <td><font size=2>8690</font></td>
+    <td><font size=2>9425</font></td>
+    <td><font size=2>9360</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>240</font></td>
     <td><font size=2>0</font></td></tr>
@@ -215,42 +215,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>9555</font></td>
-    <td><font size=2>8675</font></td>
+    <td><font size=2>10470</font></td>
+    <td><font size=2>9330</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>255</font></td>
-    <td><font size=2>3</font></td></tr>
+    <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9225</font></td>
-    <td><font size=2>9565</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9895</font></td>
+    <td><font size=2>10310</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7875</font></td>
-    <td><font size=2>8450</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>8530</font></td>
+    <td><font size=2>9365</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8085</font></td>
-    <td><font size=2>9985</font></td>
+    <td><font size=2>8730</font></td>
+    <td><font size=2>10550</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>7580</font></td>
-    <td><font size=2>9640</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>8145</font></td>
+    <td><font size=2>10285</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
