--- a/week16.html
+++ b/week16.html
@@ -51,13 +51,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -96,8 +96,8 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>LThomas</td>       <td></td><td align=right>0</td></tr>
